--- a/index.css
+++ b/index.css
@@ -5,6 +5,16 @@ body {
   background-attachment: fixed;
   font-family: "Mukta", sans-serif;
 }
+
+.main-container{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 100px;
+ 
+}
+#text{
+  margin-top: 100px;
+}
 img {
   width: 20cm;
   height: 15cm;
@@ -28,14 +38,6 @@ button {
   font-size: 20px;
   font-weight: bolder;
   margin-top: 1cm;
-}
-div {
-  position: relative;
-  left: 23cm;
-  bottom: 12cm;
-  width: 15cm;
-  height: 3cm;
-  text-align: center;
 }
 @media screen and (max-width:376px) {
   /* body{
