--- a/profile.css
+++ b/profile.css
@@ -43,6 +43,9 @@ input {
 }
 .img-container{
   margin-right: 200px;
+  position:relative;
+  right:100px
+  bottom:100px
 }
 #form{
   margin-top: 50px;
